# ggml-sys-bleedingedge

./: .gitignore  .gitmodules  Cargo.toml  README.md  VERSION.txt  build.rs  ggml-tag-current.txt  ggml-tag-previous.txt
.github/workflows/: publish_crate.yml  sync_ggml.yml
ggml-src/: build-info.h
scripts/: syncggml.sh
src/: bindings.rs  lib.rs
tests/: simple.rs
