[package]
name = "ggml-sys-bleedingedge"
version = "2306131234.0.0+llamacpp-release.master-74d4cfa"
description = "Bleeding edge low-level bindings to GGML. "
repository = "https://github.com/KerfuffleV2/ggml-sys-bleedingedge"
keywords = ["deep-learning", "machine-learning", "tensors", "ggml", "ml"]
edition = "2021"
license = "MIT"
resolver = "2"

[lib]

[build-dependencies]
cc = "^1.0"
bindgen = "0.65"
