[package]
name = "ggml-sys-bleedingedge"
version = "2306180611.0.0+llamacpp-release.master-57cd694"
description = "Bleeding edge low-level bindings to GGML. "
repository = "https://github.com/KerfuffleV2/ggml-sys-bleedingedge"
keywords = ["deep-learning", "machine-learning", "tensors", "ggml", "ml"]
edition = "2021"
license = "MIT"
resolver = "2"

[features]
default = []
no_k_quants = []
no_accelerate = []
use_cmake = []
cublas = ["use_cmake"]
clblast = ["use_cmake"]
openblas = ["use_cmake"]
metal = ["use_cmake"]

[lib]

[build-dependencies]
cc = "^1.0"
bindgen = "0.66"
cmake = "0.1"
